--- a/src/main/resources/templates/client/layout/header.html
+++ b/src/main/resources/templates/client/layout/header.html
@@ -153,7 +153,7 @@
                             </a>
                           </li>
                         </div>
-                        <div sec:authorize="hasAnyRole('ACADEMIC_AFFAIRS')">
+                        <div sec:authorize="hasAnyRole('SUBJECT_DEPARTMENT')">
                           <li>
                             <a
                               class="dropdown-item"
