--- a/src/main/resources/templates/admin/class/show.html
+++ b/src/main/resources/templates/admin/class/show.html
@@ -42,7 +42,7 @@
                     <a
                       th:href="@{/admin/class/create}"
                       class="btn btn-primary"
-                      sec:authorize="hasAnyRole('ACADEMIC_AFFAIRS', 'PRINCIPAL')"
+                      sec:authorize="hasAnyRole('VICE_PRINCIPAL', 'PRINCIPAL')"
                     >
                       + Tạo lớp
                     </a>
@@ -90,13 +90,13 @@
                           <a
                             th:href="@{'/admin/class/update/' + ${classRoom.id}}"
                             class="btn btn-warning btn-sm mx-1"
-                            sec:authorize="hasAnyRole('ACADEMIC_AFFAIRS', 'PRINCIPAL')"
+                            sec:authorize="hasAnyRole('VICE_PRINCIPAL', 'PRINCIPAL')"
                             >Sửa</a
                           >
                           <a
                             th:href="@{'/admin/class/delete/' + ${classRoom.id}}"
                             class="btn btn-danger btn-sm"
-                            sec:authorize="hasAnyRole('ACADEMIC_AFFAIRS', 'PRINCIPAL')"
+                            sec:authorize="hasAnyRole('VICE_PRINCIPAL', 'PRINCIPAL')"
                             >Xóa</a
                           >
                         </td>
