--- a/src/main/resources/templates/admin/test/detail.html
+++ b/src/main/resources/templates/admin/test/detail.html
@@ -66,7 +66,7 @@
                         <th>Điểm</th>
                         <th>Thời gian nộp</th>
                         <th
-                          sec:authorize="hasAnyRole('ACADEMIC_AFFAIRS', 'PRINCIPAL')"
+                          sec:authorize="hasAnyRole('SUBJECT_DEPARTMENT', 'PRINCIPAL')"
                         >
                           Hành động
                         </th>
@@ -84,7 +84,7 @@
                           th:text="${#temporals.format(res.submittedAt, 'dd/MM/yyyy HH:mm')}"
                         ></td>
                         <td
-                          sec:authorize="hasAnyRole('ACADEMIC_AFFAIRS', 'PRINCIPAL')"
+                          sec:authorize="hasAnyRole('SUBJECT_DEPARTMENT', 'PRINCIPAL')"
                         >
                           <a
                             th:href="@{'/admin/test/result/' + ${res.id} + '?testId=' + ${id}}"
