--- a/src/main/resources/templates/admin/class/create.html
+++ b/src/main/resources/templates/admin/class/create.html
@@ -21,7 +21,7 @@
     ></script>
   </head>
   <div th:replace="admin/layout/header"></div>
-  <body class="sb-nav-fixed">
+  <body class="sb-nav-fixed sb-sidenav-toggled">
     <div id="layoutSidenav">
       <div th:replace="admin/layout/sidebar"></div>
       <div id="layoutSidenav_content">
