--- a/src/main/resources/templates/admin/role/delete.html
+++ b/src/main/resources/templates/admin/role/delete.html
@@ -29,7 +29,7 @@
           <div class="container-fluid px-4">
             <ol class="breadcrumb mb-4">
               <li class="breadcrumb-item active">
-                <a href="/admin/test">Test</a>
+                <a th:href="@{/admin/role}">Role</a>
               </li>
               <li class="breadcrumb-item active">Delete</li>
             </ol>
@@ -39,30 +39,30 @@
                 <div class="col-12 mx-auto">
                   <div class="d-flex justify-content-between">
                     <h3>
-                      Delete the test with id = <span th:text="${id}"></span>
+                      Delete the Role with id = <span th:text="${id}"></span>
                     </h3>
                   </div>
                   <hr />
 
                   <div class="col-md-3">
                     <div class="alert alert-danger text-center" role="alert">
-                      Are you sure to delete this test?
+                      Are you sure you want to delete this Role?
                     </div>
                   </div>
 
-                  <form th:action="@{/admin/test/delete}" method="post">
-                    <div class="mb-3" style="display: none">
-                      <label class="form-label">Id:</label>
-                      <input type="hidden" name="id" th:value="${id}" />
-                    </div>
-
+                  <form th:action="@{/admin/role/delete}" method="post">
+                    <input type="hidden" name="id" th:value="${id}" />
                     <button class="btn btn-danger">Confirm</button>
+                    <a th:href="@{/admin/role}" class="btn btn-secondary ms-2"
+                      >Cancel</a
+                    >
                   </form>
                 </div>
               </div>
             </div>
           </div>
         </main>
+
         <div th:replace="admin/layout/footer"></div>
       </div>
     </div>
