--- a/src/main/resources/templates/admin/role/create.html
+++ b/src/main/resources/templates/admin/role/create.html
@@ -70,11 +70,11 @@
                     <!-- Danh sách Permissions theo Module -->
                     <div
                       th:each="entry : ${permissionsByModule}"
-                      class="mb-3 border rounded p-2"
+                      class="border rounded p-2"
                     >
                       <!-- Header module -->
                       <div
-                        class="d-flex justify-content-between align-items-center mb-2"
+                        class="d-flex justify-content-between align-items-center mb-1"
                       >
                         <div class="fw-bold" th:text="${entry.key}">
                           Module Name
@@ -170,7 +170,7 @@
                     </div>
 
                     <!-- Nút submit -->
-                    <div class="mb-4">
+                    <div class="mb-4 mt-4">
                       <button type="submit" class="btn btn-primary">
                         Tạo Role
                       </button>
