--- a/src/main/resources/templates/admin/user/show.html
+++ b/src/main/resources/templates/admin/user/show.html
@@ -40,7 +40,10 @@
                 <div class="col-12 mx-auto">
                   <div class="d-flex justify-content-between">
                     <h3>Table User</h3>
-                    <a th:href="@{/admin/user/create}" class="btn btn-primary"
+                    <a
+                      th:if="${permissions.contains('GET /admin/user/create')}"
+                      th:href="@{/admin/user/create}"
+                      class="btn btn-primary"
                       >Create a User</a
                     >
                   </div>
@@ -72,16 +75,19 @@
 
                         <td>
                           <a
+                            th:if="${permissions.contains('GET /admin/user/{id}')}"
                             th:href="@{'/admin/user/' + ${user.id}}"
                             class="btn btn-success"
                             >View</a
                           >
                           <a
+                            th:if="${permissions.contains('GET /admin/user/update/{id}')}"
                             th:href="@{'/admin/user/update/' + ${user.id}}"
                             class="btn btn-warning mx-2"
                             >Update</a
                           >
                           <a
+                            th:if="${permissions.contains('GET /admin/user/delete/{id}')}"
                             th:href="@{'/admin/user/delete/' + ${user.id}}"
                             class="btn btn-danger"
                             >Delete</a
