--- a/src/main/resources/templates/admin/user/detail.html
+++ b/src/main/resources/templates/admin/user/detail.html
@@ -27,12 +27,11 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h1 class="mt-4">Manage User</h1>
             <ol class="breadcrumb mb-4">
               <li class="breadcrumb-item active">
-                <a th:href="@{/admin}">Dashboard</a>
+                <a th:href="@{/admin/user}">User</a>
               </li>
-              <li class="breadcrumb-item active">Users</li>
+              <li class="breadcrumb-item active">View User</li>
             </ol>
 
             <div class="mt-5">
